force-app/main/default/objects/Sendgrid_Setting__c/Sendgrid_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Sendgrid Setting</label>
</CustomObject>