force-app/main/default/objects/Sendgrid_Setting__c/fields/Account_Contact_Sendgrid_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Sendgrid_Id__c</fullName>
    <label>Account Contact Sendgrid Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>