force-app/main/default/objects/Sendgrid_Setting__c/fields/Email_Activity_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Email_Activity_EndPoint__c</fullName>
    <description>Sendgrid - Email Activity endpoint</description>
    <label>Email Activity EndPoint</label>
    <type>Url</type>
</CustomField>