force-app/main/default/objects/Sendgrid_Setting__c/fields/Integration_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_API_Key__c</fullName>
    <label>Integration API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>