force-app/main/default/objects/Sendgrid_Setting__c/fields/Location_Contact_Sendgrid_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Contact_Sendgrid_Id__c</fullName>
    <label>Location Contact Sendgrid Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>