force-app/main/default/objects/Sendgrid_Setting__c/fields/Sendgrid_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Sendgrid_From_Name__c</fullName>
    <label>Sendgrid From Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>