force-app/main/default/objects/Sendgrid_Setting__c/fields/Sendgrid_ReplyTo_Email__c.field-meta.xml
<CustomField>
    <fullName>Sendgrid_ReplyTo_Email__c</fullName>
    <label>Sendgrid ReplyTo Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>