force-app/main/default/objects/Sendgrid_Setting__c/fields/SyncToSendgrid__c.field-meta.xml
<CustomField>
    <fullName>SyncToSendgrid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SyncToSendgrid?</label>
    <type>Checkbox</type>
</CustomField>